RegressionTests/TestSuiteExport/reject/parameter_storage_class.blade
// EXPECT: fail
// DIAGNOSTICS: InvalidParameterStorageClass

fn f(cog x: u32) void {
}